force-app/main/default/objects/Album__c/Album__c.object-meta.xml
<CustomObject>
    <label>Album</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Album Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Albums</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>