force-app/main/default/objects/Album__c/fields/Amount_Of_Songs__c.field-meta.xml
<CustomField>
    <fullName>Amount_Of_Songs__c</fullName>
    <label>Amount Of Songs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>