force-app/main/default/objects/Album__c/fields/Band__c.field-meta.xml
<CustomField>
    <fullName>Band__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Band</label>
    <referenceTo>Band__c</referenceTo>
    <relationshipLabel>Albums</relationshipLabel>
    <relationshipName>Albums</relationshipName>
    <type>Lookup</type>
</CustomField>