force-app/main/default/objects/Album__c/fields/Is_Have_A_Reward__c.field-meta.xml
<CustomField>
    <fullName>Is_Have_A_Reward__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Have A Reward</label>
    <type>Checkbox</type>
</CustomField>